# fw-fanctrl-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.json
.github/workflows/: ci.yml  release.yml
docs/: temperature-sensor-discovery.md
src/: config.rs  controller.rs  curve.rs  error.rs  hardware.rs  lib.rs  main.rs  socket.rs
tests/: cli.rs  config.rs
