[package]
name = "fw-fanctrl"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

[dependencies.framework_lib]
git = "https://github.com/FrameworkComputer/framework-system"
default-features = false
features = ["readonly"]

[build-dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
uuid = { version = "1", features = ["v4"] }
